# juritok

./: .gitignore  BRISSON_Sylvain_test_sentencepiece.ipynb  README.md  TP_tokenization.py  Tokenization_test.txt  coding.ipynb  example_model.model  example_model.vocab  jorf.model  jorf.vocab  juritok.ipynb  juritok_tockenizer.ipynb  large_model.model  large_model.vocab  m.model  m.vocab  main.py  model.model  model.vocab  my-main.py  my_model.model  my_model.vocab  my_model2.model  my_model2.vocab  pyproject.toml  small_model.model  small_model.vocab  test.ipynb  test.py  test.txt  tests.ipynb  tockenizer.py  tokenisation.ipynb  tokenization.ipynb  tokenizer.model  tokenizer.py  tokenizer.vocab  trained.model  trained.vocab
example/: example_model.model  example_model.vocab  gpt_example.ipynb  test.txt
juritok/: README.md  TP2.py  TP2_BUGUET_Romain.py  TP_2_Salome_Ouaknine.py  __init__.py  data_preprocessing.py  eda.ipynb  generate_txt_file.py  jorf_2023.model  jorf_2023.vocab  m.model  m.vocab  main.py  model_100.model  model_100.vocab  model_10000.model  model_10000.vocab  model_12000.model  model_12000.vocab  model_15000.model  model_15000.vocab  model_16000.model  model_16000.vocab  modele.model  modele.vocab  notebook.ipynb  script.ipynb  sortie_du_code.txt  test.ipynb  test.py  tokenization.py  tokenize_jorf.py  tokenized_jorf_2023.csv  tokenizer.ipynb  tokenizer.py  tokenizer2.py  tokenizing.ipynb  tp2.py  tp2_tokenizer.py  training.py  (+1 more)
models/: 10000_tokens.model  10000_tokens.vocab  1000_tokens.model  1000_tokens.vocab  1000_tokens_Law.model  100_tokens.model  (+17 more)
